# erniebot-rs

./: .gitignore  Cargo.toml  README.md  README_zh.md  readme.md  readme_zh.md
.github/workflows/: rust.yml
examples/: chat.rs  chat_with_function.rs  embedding.rs  rerank.rs  text2image.rs
src/: chat.rs  embedding.rs  errors.rs  lib.rs  message.rs  model.rs  option.rs  response.rs  utils.rs
src/chat/: endpoint.rs  function.rs  message.rs  mod.rs  model.rs  option.rs  response.rs
src/embedding/: endpoint.rs  mod.rs  model.rs  response.rs
src/reranker/: endpoint.rs  mod.rs  model.rs  response.rs
src/text2image/: endpoint.rs  mod.rs  model.rs  option.rs  response.rs
