[package]
name = "erniebot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
serde = {verion = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
url = "2.5.0"
reqwest = {version = "0.11.6", features = ["json","blocking"]}
