[package]
name = "erniebot-rs"
license = "MIT"
description = "A unofficial Rust library for the Ernie API"
homepage = "https://github.com/chenwanqq/erniebot-rs"
repository = "https://github.com/chenwanqq/erniebot-rs"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
serde = {verion = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
url = "2.5.0"
reqwest = {version = "0.11.6", features = ["json","blocking"]}
thiserror = "1.0.57"
json_value_merge = "2.0"
reqwest-eventsource = "0.5.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
base64 = "0.21.7"
image = "0.24.9"
