[package]
name = "erniebot-rs"
license = "MIT"
description = "A unofficial Rust library for the Ernie API"
homepage = "https://github.com/chenwanqq/erniebot-rs"
repository = "https://github.com/chenwanqq/erniebot-rs"
version = "0.4.1"
edition = "2021"
exclude = [".github/",".vscode/",".gitignore"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.113"
url = "2.5.0"
reqwest = {version = "0.12.3", features = ["json"]}
ureq = { version = "2.9.6", features = ["json", "charset"] }
thiserror = "1.0.57"
json_value_merge = "2.0"
reqwest-eventsource = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
base64 = "0.22.0"
image = "0.25.1"
schemars = "0.8"
